RESOLVED FIXED 167281
Database file not removed for origins after deleting all databases
https://bugs.webkit.org/show_bug.cgi?id=167281
Summary Database file not removed for origins after deleting all databases
Carlos Garcia Campos
Reported 2017-01-21 01:50:33 PST
I noticed this writing unit tests for new WebsiteData API in the GTK+ port. When DatabaseTracker::deleteDatabasesModifiedSince() is called with a min time, all databases for every origin are deleted. For each origin if all databases are removed DatabaseTracker::deleteOrigin() is called to remove also the origin database file. However, DatabaseTracker::deleteOrigin() returns early if the origin doesn't have databases and in this particular case it never has databases, because we have just removed them.
Attachments
Patch (3.36 KB, patch)
2017-01-21 01:55 PST, Carlos Garcia Campos
darin: review+
Carlos Garcia Campos
Comment 1 2017-01-21 01:55:20 PST
Carlos Garcia Campos
Comment 2 2017-01-22 23:30:19 PST
Note You need to log in before you can comment on or make changes to this bug.